...
    <string name="test_movie_description">This is a description of the movie.</string>
    <string name="text_list_movie_directors">Directors</string>
    <string name="text_list_movie_star_actors">Star Actors</string>
    <string name="text_directors">Directors:</string>
    <string name="text_star_actors">Star Actors:</string>
    <string name="text_launch_camera">text_camera</string>
    <string name="text_enter_name">text enter name</string>
    <string name="text_ok">text oke</string>
    <string name="text_launch_dialog">lauch dialog</string>
    <string name="row_label">Clicked on row</string>
    <string name="hello_fragment">hello fragment</string>
    <string name="hello_world">Hello Espresso!</string>
    <string name="change_text">Change text taking some time</string>
    <string name="type_something">type something…</string>
...
